# IggNition

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/worktrees/gracious-visvesvaraya-3d1e9c/: .gitignore  LICENSE
.claude/worktrees/gracious-visvesvaraya-3d1e9c/.github/workflows/: release.yml
.claude/worktrees/gracious-visvesvaraya-3d1e9c/benches/: numbering.rs
.claude/worktrees/gracious-visvesvaraya-3d1e9c/docs/: DESIGN.md
.claude/worktrees/gracious-visvesvaraya-3d1e9c/python/iggnition/: __init__.py  _cli.py  regions.py
.claude/worktrees/gracious-visvesvaraya-3d1e9c/src/: batch.rs  cli.rs  error.rs  lib.rs  python_api.rs
.claude/worktrees/gracious-visvesvaraya-3d1e9c/src/core/: frame.rs  germline.rs
.claude/worktrees/gracious-visvesvaraya-3d1e9c/src/io/: mod.rs  output.rs  tsv.rs
.claude/worktrees/great-bohr-039619/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/worktrees/great-bohr-039619/.cargo/: config.toml
.claude/worktrees/great-bohr-039619/.github/workflows/: ci.yml
.claude/worktrees/great-bohr-039619/python/iggnition/: __init__.py
.claude/worktrees/great-bohr-039619/scripts/: bootstrap_germlines.py  build_python.sh
.claude/worktrees/great-bohr-039619/src/: cli_runner.rs  python_api.rs
.claude/worktrees/great-bohr-039619/src/core/: aho.rs  align.rs  germline_data.rs  mod.rs  translate.rs  types.rs
.claude/worktrees/great-bohr-039619/src/io/: fasta.rs  parquet.rs
.claude/worktrees/great-bohr-039619/tests/: test_python_api.py
.github/workflows/: ci.yml
benches/: numbering.rs
python/iggnition/: __init__.py
python/ignition/: __init__.py  _cli.py
scripts/: bootstrap_germlines.py  build_python.sh
src/: cli.rs  cli_runner.rs  error.rs  lib.rs  python_api.rs
src/core/: aho.rs  align.rs  frame.rs  germline.rs  germline_data.rs  mod.rs  translate.rs  types.rs
src/io/: fasta.rs  mod.rs  output.rs  parquet.rs  tsv.rs
tests/: test_python_api.py
